fix overlay covering texts

--- a/src/styles/collection.scss
+++ b/src/styles/collection.scss
@@ -30,6 +30,7 @@
 
     p {
       margin: 0 auto;
+      z-index: 2;
     }
   }
 
